correction of links

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </h2>
     <main>
         <section>
-            <a href="pages/binaryConverter.html" target="_self">Binary</a>
+            <a href="pages/decimalConverter.html" target="_self">Binary</a>
         </section>
         <section>
-            <a href="pages/decimalConverter.html" target="_self">Decimal</a>
+            <a href="pages/binaryConverter.html" target="_self">Decimal</a>
         </section>
     </main>
 </body>
